<resources>
    <string name="app_name">iPOS Beps</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="txt_view_card_only">Card Only</string>
    <string name="txt_view_contactless">Contactless</string>
    <string name="txt_view_trx_success">Transaction Success</string>
    <string name="txt_view_trx_failed">Transaction Failed</string>
    <string name="txt_view_trx_invalid_pin">Invalid PIN</string>
    <string name="txt_view_trx_incorrect_pwd">Incorrect Password</string>
    <string name="txt_view_void_card">Please Swipe/Dip/Tap Your Card</string>
    <string name="txt_view_void_card2">Or Choose Payment Other Method Below</string>
    <string name="txt_view_void_contactless">Please Tap Your Card</string>
    <string name="txt_view_trx_success_msg">Transaction Success !</string>
    <string name="txt_view_trx_success_msg2">Don\'t Forget to Pick Your Card</string>
    <string name="txt_view_trx_failed_msg">Transaction Failed !</string>
    <string name="txt_view_trx_failed_msg2">Connection Error</string>
    <string name="txt_view_trx_invalid_msg">Invalid PIN !</string>
    <string name="txt_view_trx_incorrect_pass">Incorrect Password !</string>
    <string name="txt_view_trx_invalid_msg2">Do You Want to Try Again..?</string>
    <string name="txt_view_pin">Pin Entry</string>
    <string name="txt_view_pin_desc">Enter Your PIN</string>
    <string name="txt_view_pwd">Password</string>
    <string name="txt_view_pwd_desc">Input Your Password</string>
    <string name="txt_view_noResult">No Result</string>
    <string name="txt_view_noResult_msg">Opss... No Result !</string>

    <string name="txt_view_RegulerSale">Reguler Sale</string>
    <string name="txt_view_RegulerSaleConfirm">Reguler Sale Confirm</string>
    <string name="txt_view_RegulerSaleTip">Reguler Sale With Tip</string>
    <string name="txt_view_Refund">Refund</string>
    <string name="txt_view_pan">PAN</string>
    <string name="txt_edit_pan">5432-****-**56-7890</string>
    <string name="txt_view_exp_date">Exp. Date</string>
    <string name="txt_edit_exp_date">07/22</string>
    <string name="txt_view_card_name">Akhirudin Muhammad</string>
    <string name="txt_view_amount">Amount</string>
    <string name="txt_view_tip">Tip</string>
    <string name="txt_edit_amount">100.000</string>
    <string name="txt_edit_tip">10.000</string>
    <string name="txt_view_qustion_pin">Do You Want to Enter Pin..?</string>
    <string name="txt_view_trx_type">Trx Type</string>
    <string name="txt_edit_trx_type">Reguler Sale</string>

    <string name="btn_trx_confirm">CONFIRM</string>
    <string name="btn_trx_confirm_tip">CONFIRM WITH TIP</string>
    <string name="btn_trx_signature">SIGNATURE</string>
    <string name="btn_trx_pin_entry">PIN ENTRY</string>
    <string name="btn_trx_yes">YES</string>
    <string name="btn_trx_no">NO</string>
    <string name="btn_trx_cancel">CANCEL</string>
    <string name="btn_trx_void">VOID</string>

    <string name="txt_view_void">Void</string>
    <string name="txt_view_void_search">Void Search</string>
    <string name="txt_view_search_msg">Search here...</string>
    <string name="txt_view_payment">Payment</string>
    <string name="txt_view_sale">Sale</string>
    <string name="txt_view_settlement">Settlement</string>
    <string name="txt_view_adjustment">Adjustment</string>
    <string name="txt_view_trx">Transactions</string>
    <string name="txt_view_refund">Refund</string>
    <string name="txt_view_pre">Pre-Auth</string>
    <string name="btn_home_more_menu">MORE MENU</string>
    <string name="btn_home_settlement">SETTLEMENT</string>
    <string name="btn_home_function">FUNCTION</string>
    <string name="btn_home_enter">ENTER</string>

    <string name="txt_payment_paypal">Paypal</string>
    <string name="txt_payment_visa">Visa</string>
    <string name="txt_payment_maestro">Maestro</string>
    <string name="txt_payment_contactless">Contactless</string>
    <string name="txt_payment_card_only">Card Only</string>
    <string name="txt_payment_jcb">Jcb</string>

</resources>
