<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/app_act_main_actionbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_toolbar_height"
        android:background="@color/colorAccent"
        android:paddingLeft="@dimen/app_padding_left"
        android:paddingRight="@dimen/app_padding_right">

        <ImageView
            android:id="@+id/imgViewBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_action_back" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/txt_view_RegulerSale"
            android:textColor="@android:color/background_light" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/frameRegulerSale"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/app_act_main_actionbar"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_corners_mask"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/txtViewPan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/txt_view_pan"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextPan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="12dp"
            android:text="@string/txt_edit_pan"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewExp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="80dp"
            android:text="@string/txt_view_exp_date"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextExp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="64dp"
            android:text="@string/txt_edit_exp_date"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewCardName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="130dp"
            android:text="@string/txt_view_card_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgViewLine"
            android:layout_width="match_parent"
            android:layout_height="7dp"
            android:layout_marginTop="190dp"
            app:srcCompat="@mipmap/line" />

        <TextView
            android:id="@+id/textViewAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="240dp"
            android:text="@string/txt_view_amount"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="224dp"
            android:text="@string/txt_edit_amount"
            android:textSize="16sp" />

    </FrameLayout>

    <Button
        android:id="@+id/btnPinEntry"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/frameRegulerSale"
        android:layout_below="@+id/frameRegulerSale"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_corners_mask"
        android:text="@string/btn_trx_confirm" />

    <Button
        android:id="@+id/btnConfirmTip"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnPinEntry"
        android:layout_alignBottom="@+id/btnPinEntry"
        android:layout_alignEnd="@+id/frameRegulerSale"
        android:background="@drawable/button_corners_mask"
        android:text="@string/btn_trx_confirm_tip" />

</RelativeLayout>
