<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/app_act_main_actionbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_toolbar_height"
        android:background="@color/colorAccent"
        android:paddingLeft="@dimen/app_padding_left"
        android:paddingRight="@dimen/app_padding_right">

        <ImageView
            android:id="@+id/imgViewBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_action_back" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/txt_view_noResult"
            android:textColor="@android:color/background_light" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/imgViewNoResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_act_main_actionbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        app:srcCompat="@mipmap/ic_sad" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imgViewNoResult"
        android:layout_marginTop="20dp"
        android:text="@string/txt_view_noResult_msg"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/textView"
        android:layout_marginTop="12dp"
        android:text="@string/txt_view_trx_invalid_msg2"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btnSrcNo"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView4"
        android:layout_marginStart="63dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/button_corners_mask_orange"
        android:text="@string/btn_trx_no" />

    <Button
        android:id="@+id/btnSrcYes"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnSrcNo"
        android:layout_marginStart="17dp"
        android:layout_toEndOf="@+id/btnSrcNo"
        android:background="@drawable/button_corners_mask"
        android:text="@string/btn_trx_yes" />


</RelativeLayout>